# kubectl-watch

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README-zh.md  README.md  ROADMAP.md
.github/workflows/: docker-publish.yaml  release.yml  rust.yaml
difftastic-lib/: Cargo.toml  build.rs
difftastic-lib/src/: lib.rs  main.rs  mainfn.rs  options.rs
difftastic-lib/src/diff/: dijkstra.rs  sliders.rs  unchanged.rs
difftastic-lib/src/display/: context.rs  hunks.rs  side_by_side.rs  style.rs
difftastic-lib/src/parse/: guess_language.rs  tree_sitter_parser.rs
examples/: debug_difft.rs
issues/: segmentationfault
kubectl-watch/: Cargo.toml
kubectl-watch/src/: main.rs  options.rs  persistent.rs
kubectl-watch/src/diff/: difft.rs  mod.rs  pipeline.rs
kubectl-watch/src/kube/: apigroup.rs  discovery.rs  dynamic_object.rs  watch.rs
kubectl-watch/src/output/: db.rs  mod.rs  tui.rs  utils.rs
log/: segmentationfault
script/: kubectl-watch
src/: diff.rs  kube2.rs  main.rs  options.rs  persistent.rs
src/diff/: delta.rs  difft.rs  file.rs  mod.rs  pipeline.rs  utils.rs
src/kube/: apigroup.rs  client.rs  discovery.rs  mod.rs  watch.rs
src/output/: event.rs  mod.rs  tui.rs
