[package]
name = "kubectl-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bytelines = "2.4.0"
clap = { version = "3.1.9", default-features = false, features = ["std", "cargo", "derive"] }
edit = "0.1.3"
either = "1.6.1"
futures = "0.3.17"
git-delta-lib = { path = "./delta"}
grep-cli = "0.1.6"
kube = { version = "0.74.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.11"
tokio = { version = "1.21.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
