[package]
name = "kubectl-watch"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["chengqinglin <chengqinglin@icloud.com>"]
categories = ["development-tools", "visualization"]
description = "another watch tool with visualization view of delta change for kubectl"
homepage = "https://github.com/imuxin/kubectl-watch"
repository = "https://github.com/imuxin/kubectl-watch"
readme = "README.md"

[dependencies]
anyhow = "1.0.44"
clap = { version = "3.1.9", default-features = false, features = ["std", "cargo", "derive"] }
edit = "0.1.3"
either = "1.6.1"
futures = "0.3.17"
imuxin-delta-lib = "0.0.1"
grep-cli = "0.1.6"
kube = { version = "0.74.0", default-features = false, features = ["runtime", "derive", "client", "rustls-tls"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.11"
tokio = { version = "1.21.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
